data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1286.wast
;; 7. **Test Description:** Design a function to use `br` to branch out to a label defined before a series of nested `loops`, with the branch causing an immediate call to an imported module function engaging more control instructions.    **Specific Constraint:** Tests consistency of backward branches and loop structure handling right before calling inter-module functions.    **Relation to Control Flow Boundaries:** Ensures that backward jumps and subsequent function calls do not lead to stack corruption.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func
      (block $outer
        (loop $L1
          (loop $L2
            (br 0) ;; branch to $L2
            (call $external_func) ;; call external function
          )
        )
      )
    )
  )
  "type mismatch"
)